--- a/Rejection.conf
+++ b/Rejection.conf
@@ -1,31 +1,40 @@
-URL-REGEX,^https?:\/\/(\w\.)?up\.qingdaonews\.com,REJECT
-URL-REGEX,^https?:\/\/(\w+\.)?(ads|log\w?|tj|tongji|stat|stats|statis|trace|track|click)\.\w+\.(com|cn|net),REJECT
-URL-REGEX,^https?:\/\/(e|m)\..+/((uu|oo)\.php.+|\d+\.x?html\?$),REJECT
-URL-REGEX,^https?:\/\/.+\.beacon\.qq\.com,REJECT
-URL-REGEX,^https?:\/\/.+\.gdt\.qq\.com,REJECT
-URL-REGEX,^https?:\/\/.+\.kingsoft-office-service\.com,REJECT
-URL-REGEX,^https?:\/\/.+\.l\.qq\.com,REJECT
-URL-REGEX,^https?:\/\/[^(apple|10010)]+\.(com|cn)\/(a|A)d(s|v)?(\/|\.js),REJECT
-URL-REGEX,^https?:\/\/[^bbs]\.tianya\.cn,REJECT
-URL-REGEX,^https?:\/\/\w{6}\.com1\.z0\.glb\.clouddn\.com,REJECT
-URL-REGEX,^https?:\/\/\w{8}\.logic\.cpm\.cm\.kankan\.com,REJECT
-URL-REGEX,^https?:\/\/\w+\.cloudfront\.net\/banner,REJECT
-URL-REGEX,^https?:\/\/9377\w{2}\.com,REJECT
-URL-REGEX,^https?:\/\/a0b\w{2}\.com,REJECT
-URL-REGEX,^https?:\/\/ad\d\.sina\.com,REJECT
-URL-REGEX,^https?:\/\/ad\d\.sina\.com.cn,REJECT
-URL-REGEX,^https?:\/\/api\d\.tuisong\.baidu\.com,REJECT
-URL-REGEX,^https?:\/\/d\d\.sina\.com\.cn,REJECT
-URL-REGEX,^https?:\/\/d\d\.sinaimg\.cn,REJECT
-URL-REGEX,^https?:\/\/dl\.app\.gtja\.com/.+\d+\.jpg$,REJECT
-URL-REGEX,^https?:\/\/impservice.+?\.(.+\.)?youdao\.com,REJECT
-URL-REGEX,^https?:\/\/log\..+\.baidu\.com,REJECT
-URL-REGEX,^https?:\/\/notice\.send-anywhere\.com\/banner,REJECT
-URL-REGEX,^https?:\/\/pic\d\.zhimg\.com\/v2.+,REJECT
-URL-REGEX,^https?:\/\/sa\d\.tuisong\.baidu\.com,REJECT
-URL-REGEX,^https?:\/\/sax\d\.sina\.com\.cn,REJECT
-URL-REGEX,^https?:\/\/sax\w?\.sina\.cn,REJECT
-URL-REGEX,^https?:\/\/sax\w?\.sina\.com\.cn,REJECT
-URL-REGEX,^https?:\/\/server-\w+\.imrworldwide\.com,REJECT
-URL-REGEX,^https?:\/\/t\d{2}\.baidu\.com,REJECT
-URL-REGEX,^https?:\/\/www\.bldimg\.com\/(background|splash)\/.+\.png$,REJECT,REJECT
+^https?:\/\/(\w\.)?up\.qingdaonews\.com,REJECT
+^https?:\/\/(\w+\.)?(ads|log\w?|tj|tongji|stat|stats|statis|trace|track|click)\.\w+\.(com|cn|net),REJECT
+^https?:\/\/(e|m)\..+/((uu|oo)\.php.+|\d+\.x?html\?$),REJECT
+^https?:\/\/.+\.beacon\.qq\.com,REJECT
+^https?:\/\/.+\.gdt\.qq\.com,REJECT
+^https?:\/\/.+\.kingsoft-office-service\.com,REJECT
+^https?:\/\/.+\.l\.qq\.com,REJECT
+^https?:\/\/[^(apple|10010)]+\.(com|cn)\/(a|A)d(s|v)?(\/|\.js),REJECT
+^https?:\/\/[^bbs]\.tianya\.cn,REJECT
+^https?:\/\/\w{6}\.com1\.z0\.glb\.clouddn\.com,REJECT
+^https?:\/\/\w{8}\.logic\.cpm\.cm\.kankan\.com,REJECT
+^https?:\/\/\w+\.cloudfront\.net\/banner,REJECT
+^https?:\/\/9377\w{2}\.com,REJECT
+^https?:\/\/a0b\w{2}\.com,REJECT
+^https?:\/\/ad\d\.sina\.com,REJECT
+^https?:\/\/ad\d\.sina\.com.cn,REJECT
+^https?:\/\/api\d\.tuisong\.baidu\.com,REJECT
+^https?:\/\/d\d\.sina\.com\.cn,REJECT
+^https?:\/\/d\d\.sinaimg\.cn,REJECT
+^https?:\/\/dl\.app\.gtja\.com/.+\d+\.jpg$,REJECT
+^https?:\/\/impservice.+?\.(.+\.)?youdao\.com,REJECT
+^https?:\/\/log\..+\.baidu\.com,REJECT
+^https?:\/\/notice\.send-anywhere\.com\/banner,REJECT
+^https?:\/\/pic\d\.zhimg\.com\/v2.+,REJECT
+^https?:\/\/sa\d\.tuisong\.baidu\.com,REJECT
+^https?:\/\/sax\d\.sina\.com\.cn,REJECT
+^https?:\/\/sax\w?\.sina\.cn,REJECT
+^https?:\/\/sax\w?\.sina\.com\.cn,REJECT
+^https?:\/\/server-\w+\.imrworldwide\.com,REJECT
+^https?:\/\/t\d{2}\.baidu\.com,REJECT
+^https?:\/\/www\.bldimg\.com\/(background|splash)\/.+\.png$,REJECT,REJECT
+
+// Wiki
+^https?:\/\/.+.(m\.)?wikipedia\.org/wiki http://www.wikiwand.com/en 302
+^https?:\/\/zh.(m\.)?wikipedia\.org/(zh-hans|zh-sg|zh-cn|zh(?=/)) http://www.wikiwand.com/zh 302
+^https?:\/\/zh.(m\.)?wikipedia\.org/zh-[a-zA-Z]{2,} http://www.wikiwand.com/zh-hant 302
+
+// Google_Service_HTTPS_Jump
+^https?:\/\/(www\.)?g\.cn https://www.google.com 302
+^https?:\/\/(www\.)?google\.cn https://www.google.com 302
