--- a/Rejection.conf
+++ b/Rejection.conf
@@ -1,3 +1,22 @@
+(?<=aweme\/v1\/)playwm url 302 play
+(?<=&app_version=)([0-9]).([0-9]).([0-9])(?=.*) url 307 2.4.1
+(?<=&?version_code=)([0-9]).([0-9]).([0-9]) url 307 2.4.1
+(?<=&app_version=)4.4.0(?=.*) url 307 2.4.1
+(?<=&?version_code=)4.4.0 url 307 2.4.1
+(?<=&carrier_region=)CN(?=.*) url 307 JP
+(?<=&sys_region=)CN(?=.*) url 307 JP
+
+//^*.bdimg.com header-del Referer
+//^*.qpic.cn header-replace User-Agent WeChat/6.5.22.32 CFNetwork/889.9 Darwin/17.2.0
+//^*.qpic.cn header-del Referer
+//^*.ph.126.net header-del Referer
+//^*.zhimg.com header-del Referer
+//^*.cnbetacdn.com header-del Referer
+//^*.zhiding.cn header-del Referer
+//^*.c114.com.cn header-del Referer
+//^https?://www.biquge.com.tw header-del Cookie
+//^https?://www.zhihu.com/question/ header-replace User-Agent Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/66.0.3359.45 Safari/537.36
+
 ^https?:\/\/(\w\.)?up\.qingdaonews\.com,REJECT
 ^https?:\/\/(\w+\.)?(ads|log\w?|tj|tongji|stat|stats|statis|trace|track|click)\.\w+\.(com|cn|net),REJECT
 ^https?:\/\/(e|m)\..+/((uu|oo)\.php.+|\d+\.x?html\?$),REJECT
@@ -28,13 +47,19 @@
 ^https?:\/\/sax\w?\.sina\.com\.cn,REJECT
 ^https?:\/\/server-\w+\.imrworldwide\.com,REJECT
 ^https?:\/\/t\d{2}\.baidu\.com,REJECT
-^https?:\/\/www\.bldimg\.com\/(background|splash)\/.+\.png$,REJECT,REJECT
+^https?:\/\/www\.bldimg\.com\/(background|splash)\/.+\.png$,REJECT
 
-// Wiki
-^https?:\/\/.+.(m\.)?wikipedia\.org/wiki http://www.wikiwand.com/en 302
-^https?:\/\/zh.(m\.)?wikipedia\.org/(zh-hans|zh-sg|zh-cn|zh(?=/)) http://www.wikiwand.com/zh 302
-^https?:\/\/zh.(m\.)?wikipedia\.org/zh-[a-zA-Z]{2,} http://www.wikiwand.com/zh-hant 302
+// 腾讯
+^https?:\/\/.+\/variety.tc.qq.com\/ - reject
+^https?:\/\/.+\/vlive.qqvideo.tc.qq.com\/ - reject
+^https?:\/\/.+\/hls.cache.p4p\/ - reject
+^https?:\/\/.+\/omts.tc.qq.com\/ - reject
 
-// Google_Service_HTTPS_Jump
-^https?:\/\/(www\.)?g\.cn https://www.google.com 302
-^https?:\/\/(www\.)?google\.cn https://www.google.com 302
+
+//^https?://.+.(m.)?wikipedia.org/wiki url 302 http://www.wikiwand.com/en
+//^https?://zh.(m.)?wikipedia.org/(zh-hans|zh-sg|zh-cn|zh(?=/)) url 302 http://www.wikiwand.com/zh
+//^https?://zh.(m.)?wikipedia.org/zh-[a-zA-Z]{2,} url 302 http://www.wikiwand.com/zh-hant
+
+^https?://(www.)?g.cn url 302 https://www.google.com
+^https?://(www.)?google.cn url 302 https://www.google.com
+^https?://(www.)?google.cn/search url 302 https://www.google.com/search
