--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -490,12 +490,12 @@ DOMAIN-SUFFIX,windows.net,策略
 DOMAIN-SUFFIX,windowsupdate.com,策略
 
 //Apple
-IP-CIDR,17.0.0.0/8,策略
+IP-CIDR,17.0.0.0/8,策略,no-resolve
 DOMAIN,appleiphonecell.com,策略
 USER-AGENT,AppStore*,策略
 USER-AGENT,com.apple.appstored*,策略
-USER-AGENT,cloudd*,PROXY
-DOMAIN-KEYWORD,icloud,PROXY
+USER-AGENT,cloudd*,策略
+DOMAIN-KEYWORD,icloud,策略
 DOMAIN-KEYWORD,itunes,策略
 DOMAIN-SUFFIX,aaplimg.com,策略
 DOMAIN-SUFFIX,apple.co,策略
@@ -504,8 +504,8 @@ DOMAIN-SUFFIX,appsto.re,策略
 DOMAIN-SUFFIX,cdn-apple.com,策略
 DOMAIN-SUFFIX,me.com,策略
 DOMAIN-SUFFIX,mzstatic.com,策略
-DOMAIN-SUFFIX,icloud.com,PROXY
-DOMAIN-SUFFIX,icloud-content.com,PROXY
+DOMAIN-SUFFIX,icloud.com,策略
+DOMAIN-SUFFIX,icloud-content.com,策略
 DOMAIN-SUFFIX,itunes.com,策略
 DOMAIN-SUFFIX,itunes-apple.com.akadns.net,策略
 
