--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -423,6 +423,7 @@ IP-CIDR,74.117.182.77/32,REJECT,no-resolve
 IP-CIDR,78.140.131.214/32,REJECT,no-resolve
 
 //me
+DOMAIN-KEYWORD,github,PROXY,force-remote-dns
 DOMAIN-SUFFIX,muncloud.com,PROXY,force-remote-dns
 IP-CIDR,192.126.125.210/32,DIRECT,no-resolve
 DOMAIN-SUFFIX,cordcloud.cc,PROXY,force-remote-dns
