--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -63,9 +63,9 @@ DOMAIN-SUFFIX,ls.apple.com,DIRECT
 
 
 # > Exclusions
-DOMAIN,analytics.google.com,PROXY,force-remote-dns
-DOMAIN,analyticsinsights-pa.googleapis.com,PROXY,force-remote-dns
-DOMAIN,analyticsreporting.googleapis.com,PROXY,force-remote-dns
+DOMAIN,analytics.google.com,DIRECT
+DOMAIN,analyticsinsights-pa.googleapis.com,DIRECT
+DOMAIN,analyticsreporting.googleapis.com,DIRECT
 DOMAIN-SUFFIX,vd.l.qq.com,DIRECT
 DOMAIN-SUFFIX,goodreads.com,PROXY,force-remote-dns
 
