--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -423,10 +423,11 @@ IP-CIDR,74.117.182.77/32,REJECT,no-resolve
 IP-CIDR,78.140.131.214/32,REJECT,no-resolve
 
 //me
+IP-CIDR,198.11.184.0/21,DIRECT,no-resolve
+IP-CIDR,198.11.128.0/18,DIRECT,no-resolve
 DOMAIN-KEYWORD,github,PROXY,force-remote-dns
-DOMAIN-SUFFIX,muncloud.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,muncloud.com,PROXY
 IP-CIDR,192.126.125.210/32,DIRECT,no-resolve
-DOMAIN-SUFFIX,cordcloud.cc,PROXY,force-remote-dns
 DOMAIN,e.crashlytics.com,DIRECT
 DOMAIN-SUFFIX,digicert.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,ampproject.net,PROXY,force-remote-dns
