--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -63,6 +63,7 @@ DOMAIN-SUFFIX,ls.apple.com,DIRECT
 
 
 # > Exclusions
+DOMAIN,www.googleadservices.com,DIRECT
 DOMAIN,analytics.google.com,DIRECT
 DOMAIN,analyticsinsights-pa.googleapis.com,DIRECT
 DOMAIN,analyticsreporting.googleapis.com,DIRECT
