--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -424,6 +424,7 @@ IP-CIDR,74.117.182.77/32,REJECT,no-resolve
 IP-CIDR,78.140.131.214/32,REJECT,no-resolve
 
 //me
+DOMAIN-SUFFIX,wikimedia.org,PROXY
 IP-CIDR,198.11.184.0/21,DIRECT,no-resolve
 IP-CIDR,198.11.128.0/18,DIRECT,no-resolve
 DOMAIN-KEYWORD,github,PROXY,force-remote-dns
