--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -1255,8 +1255,8 @@ DOMAIN-SUFFIX,alphassl.com,DIRECT
 DOMAIN-SUFFIX,edu.cn,DIRECT
 
 //ali
-ip-cidr, 47.246.16.0/24, direct
-ip-cidr, 205.204.96.0/19, direct
+IP-CIDR,47.246.16.0/24,DIRECT
+IP-CIDR,205.204.96.0/19,DIRECT
 
 // TeamViewer
 IP-CIDR,185.188.32.0/24,DIRECT,no-resolve
