--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -424,6 +424,7 @@ IP-CIDR,74.117.182.77/32,REJECT,no-resolve
 IP-CIDR,78.140.131.214/32,REJECT,no-resolve
 
 //me
+DOMAIN-SUFFIX,pximg.net,PROXY
 DOMAIN-SUFFIX,wikimedia.org,PROXY
 IP-CIDR,198.11.184.0/21,DIRECT,no-resolve
 IP-CIDR,198.11.128.0/18,DIRECT,no-resolve
@@ -450,7 +451,6 @@ DOMAIN-SUFFIX,acompli.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,helpshift.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,evernote.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,ssr.sh,PROXY,force-remote-dns
-DOMAIN-SUFFIX,cordcloud.cc,PROXY,force-remote-dns
 DOMAIN-SUFFIX,sehuatang.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,sehuatang.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,zaobao.com,PROXY,force-remote-dns
