--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -70,9 +70,6 @@ DOMAIN-SUFFIX,vd.l.qq.com,DIRECT
 DOMAIN-SUFFIX,goodreads.com,PROXY,force-remote-dns
 
 //me
-DOMAIN-SUFFIX,mmstat.com,REJECT
-DOMAIN-SUFFIX,tanx.com,REJECT
-
 DOMAIN-SUFFIX,umengcloud.com,REJECT
 DOMAIN-SUFFIX,appbaqend.com,REJECT
 DOMAIN-SUFFIX,doubleclick.net,REJECT
@@ -134,105 +131,7 @@ DOMAIN-SUFFIX,miaozhen.com,REJECT
 DOMAIN-SUFFIX,113.105.248.169/32,REJECT
 DOMAIN-SUFFIX,51.la,REJECT
 DOMAIN-SUFFIX,51la.net,REJECT
-DOMAIN-SUFFIX,8cnd.com,REJECT
-DOMAIN-SUFFIX,a-m-s.adnonstop.com,REJECT
-DOMAIN-SUFFIX,analy.tuniu.cn,REJECT
-DOMAIN-SUFFIX,analyse.weather.com.cn,REJECT
-DOMAIN-SUFFIX,apistat.gao7.com,REJECT
-DOMAIN-SUFFIX,apistat.wasu.cn,REJECT
-DOMAIN-SUFFIX,bc.qunar.com,REJECT
-DOMAIN-SUFFIX,bdstatic.eastmoney.com,REJECT
-DOMAIN-SUFFIX,carstat.bitauto.com,REJECT
-DOMAIN-SUFFIX,cbjg.cqnews.net,REJECT
-DOMAIN-SUFFIX,cdnlog.zhenai.com,REJECT
-DOMAIN-SUFFIX,cig.com.cn,REJECT
-DOMAIN-SUFFIX,cnpc.infzm.com,REJECT
-DOMAIN-SUFFIX,count.candou.com,REJECT
-DOMAIN-SUFFIX,count.enet.com.cn,REJECT
-DOMAIN-SUFFIX,count.iyaxin.com,REJECT
-DOMAIN-SUFFIX,count.pcauto.com.cn,REJECT
-DOMAIN-SUFFIX,count.pcgames.com.cn,REJECT
-DOMAIN-SUFFIX,counter.pcauto.com.cn,REJECT
-DOMAIN-SUFFIX,counter.tianjimedia.com,REJECT
-DOMAIN-SUFFIX,countpage.sznews.com,REJECT
-DOMAIN-SUFFIX,cpms.now.com,REJECT
-DOMAIN-SUFFIX,ejieban.com,REJECT
-DOMAIN-SUFFIX,fcm.baidu.com,REJECT
-DOMAIN-SUFFIX,g.yccdn.com,REJECT
-DOMAIN-SUFFIX,haostat.qihoo.com,REJECT
-DOMAIN-SUFFIX,hiido.qihoo.com,REJECT
-DOMAIN-SUFFIX,imgstat.baidu.com,REJECT
-DOMAIN-SUFFIX,imp.zol.com.cn,REJECT
-DOMAIN-SUFFIX,ipinyou.com,REJECT
-DOMAIN-SUFFIX,isdspeed.qq.com,REJECT
-DOMAIN-SUFFIX,itsmore.cn,REJECT
-DOMAIN-SUFFIX,kkpgv2.xunlei.com,REJECT
-DOMAIN-SUFFIX,l.ykimg.com,REJECT
-DOMAIN-SUFFIX,ll.hudong.com,REJECT
-DOMAIN-SUFFIX,log.daqi.com,REJECT
-DOMAIN-SUFFIX,log.mtime.cn,REJECT
-DOMAIN-SUFFIX,log.music.baidu.com,REJECT
-DOMAIN-SUFFIX,log.vdisk.cn,REJECT
-DOMAIN-SUFFIX,log.zongheng.com,REJECT
-DOMAIN-SUFFIX,log2.mtime.cn,REJECT
-DOMAIN-SUFFIX,mixer.sina.cn,REJECT
-DOMAIN-SUFFIX,mlog.aipai.com,REJECT
-DOMAIN-SUFFIX,msg.ettoday.net,REJECT
-DOMAIN-SUFFIX,msg.iqiyi.com,REJECT
-DOMAIN-SUFFIX,msg.video.qiyi.com,REJECT
-DOMAIN-SUFFIX,olpv.onlylady.com,REJECT
-DOMAIN-SUFFIX,optaim.com,REJECT
-DOMAIN-SUFFIX,other.v.duowan.com,REJECT
-DOMAIN-SUFFIX,p0y.cn,REJECT
-DOMAIN-SUFFIX,playstats.v.duowan.com,REJECT
-DOMAIN-SUFFIX,pv.ltn.com.tw,REJECT
-DOMAIN-SUFFIX,pv.zhiding.cn,REJECT
-DOMAIN-SUFFIX,pvtest.zol.com.cn,REJECT
-DOMAIN-SUFFIX,qdp.qidian.com,REJECT
-DOMAIN-SUFFIX,record.kuai.xunlei.com,REJECT
-DOMAIN-SUFFIX,reportlog.dftoutiao.com,REJECT
-DOMAIN-SUFFIX,s.btime.com,REJECT
-DOMAIN-SUFFIX,s.so.360.cn,REJECT
-DOMAIN-SUFFIX,s.union.360.cn,REJECT
-DOMAIN-SUFFIX,stat.baike.com,REJECT
-DOMAIN-SUFFIX,stat.cnmo.com,REJECT
-DOMAIN-SUFFIX,stat.cqwb.com.cn,REJECT
-DOMAIN-SUFFIX,stat.cutv.com,REJECT
-DOMAIN-SUFFIX,stat.download.xunlei.com,REJECT
-DOMAIN-SUFFIX,stat.ea3w.com,REJECT
-DOMAIN-SUFFIX,stat.game.yy.com,REJECT
-DOMAIN-SUFFIX,stat.hebnews.cn,REJECT
-DOMAIN-SUFFIX,stat.hkwb.net,REJECT
-DOMAIN-SUFFIX,stat.house365.com,REJECT
-DOMAIN-SUFFIX,stat.ijinshan.com,REJECT
-DOMAIN-SUFFIX,stat.img-space.com,REJECT
-DOMAIN-SUFFIX,stat.mql5.com,REJECT
-DOMAIN-SUFFIX,stat.pchome.net,REJECT
-DOMAIN-SUFFIX,stat.timedg.com,REJECT
-DOMAIN-SUFFIX,stat.ts.cn,REJECT
-DOMAIN-SUFFIX,stat.v.17173.com,REJECT
-DOMAIN-SUFFIX,stat.xgo.com.cn,REJECT
-DOMAIN-SUFFIX,stat.yunfan.com,REJECT
-DOMAIN-SUFFIX,static.gridsumdissector.com,REJECT
-DOMAIN-SUFFIX,statis1.mama.cn,REJECT
-DOMAIN-SUFFIX,stats.766.com,REJECT
-DOMAIN-SUFFIX,stats.v.duowan.com,REJECT
-DOMAIN-SUFFIX,ta.trs.cn,REJECT
-DOMAIN-SUFFIX,tajs.qq.com,REJECT
-DOMAIN-SUFFIX,tcss.qq.com,REJECT
-DOMAIN-SUFFIX,tingyun.com,REJECT
-DOMAIN-SUFFIX,tj.21ic.com,REJECT
-DOMAIN-SUFFIX,tjj.com,REJECT
-DOMAIN-SUFFIX,tongji.mafengwo.cn,REJECT
-DOMAIN-SUFFIX,tongji.xinmin.cn,REJECT
-DOMAIN-SUFFIX,vm.aty.sohu.com,REJECT
-DOMAIN-KEYWORD,track,REJECT
-DOMAIN-SUFFIX,beacon.sina.com.cn,REJECT
-DOMAIN-KEYWORD,cnzz,REJECT
-DOMAIN-KEYWORD,umeng,REJECT
-DOMAIN-SUFFIX,msg.71.am,REJECT
-DOMAIN-SUFFIX,rs.sinajs.cn,REJECT
-DOMAIN-SUFFIX,s.360.cn,REJECT
+DOMAIN-SUFFIX,360.cn,REJECT
 DOMAIN-SUFFIX,stadig.ifeng.com,REJECT
 DOMAIN-SUFFIX,wrating.com,REJECT
 DOMAIN-SUFFIX,hockeyapp.net,REJECT
@@ -271,32 +170,7 @@ DOMAIN,hm.baidu.com,REJECT
 DOMAIN,hmma.baidu.com,REJECT
 DOMAIN,mobads-logs.baidu.com,REJECT
 
-# > Alibaba
-DOMAIN-SUFFIX,linezing.com,REJECT
-DOMAIN,adash.m.taobao.com,REJECT
-DOMAIN-SUFFIX,c-adash.m.taobao.com,REJECT
-DOMAIN-SUFFIX,m-adash.m.taobao.com,REJECT
-DOMAIN,amdc.m.taobao.com,REJECT
-DOMAIN,apoll.m.taobao.com,REJECT
-DOMAIN,tunion-api.m.taobao.com,REJECT
 
-# > Tencent
-DOMAIN,report.vip.qq.com,REJECT
-DOMAIN,report.huatuo.qq.com,REJECT
-DOMAIN,report.qcloud.com,REJECT
-DOMAIN-SUFFIX,bugly.qq.com,REJECT
-DOMAIN-SUFFIX,e.qq.com,REJECT
-DOMAIN-SUFFIX,gdt.qq.com,REJECT
-DOMAIN-SUFFIX,l.qq.com,REJECT
-DOMAIN-SUFFIX,rqd.qq.com,REJECT
-DOMAIN,btrace.qq.com,REJECT
-DOMAIN,mtrace.qq.com,REJECT
-DOMAIN,oth.eve.mdt.qq.com,REJECT
-DOMAIN,pgdt.gtimg.cn,REJECT
-DOMAIN,pingma.qq.com,REJECT
-DOMAIN,pingtcss.qq.com,REJECT
-DOMAIN,splashqqlive.gtimg.com,REJECT
-DOMAIN,tajs.qq.com,REJECT
 
 
 //me
