--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -1244,7 +1244,7 @@ IP-CIDR,54.93.0.0/16,PROXY,no-resolve
 IP-CIDR,103.4.96.0/22,PROXY,no-resolve
 IP-CIDR,129.134.0.0/17,PROXY,no-resolve
 IP-CIDR,157.240.0.0/17,PROXY,no-resolve
-IP-CIDR,173.252.64.0/19,PROXY,,no-resolve
+IP-CIDR,173.252.64.0/19,PROXY,no-resolve
 IP-CIDR,173.252.96.0/19,PROXY,no-resolve
 IP-CIDR,179.60.192.0/22,PROXY,no-resolve
 IP-CIDR,185.60.216.0/22,PROXY,no-resolve
