--- a/quanx.conf
+++ b/quanx.conf
@@ -914,7 +914,7 @@ DOMAIN-SUFFIX,arte.tv,PROXY,force-remote-dns
 DOMAIN-SUFFIX,ask.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,avgle.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,badoo.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,bandwagonhost.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,bandwagonhost.com,PROXY
 DOMAIN-SUFFIX,bbc.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,behance.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,bibox.com,PROXY,force-remote-dns
@@ -1236,8 +1236,8 @@ DOMAIN-SUFFIX,ytimg.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,akamaihd.net,PROXY,force-remote-dns
 DOMAIN,media.steampowered.com,PROXY,force-remote-dns
 DOMAIN,store.steampowered.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,brawlstars.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,brawlstarsgame.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,brawlstars.com,direct
+DOMAIN-SUFFIX,brawlstarsgame.com,direct
 DOMAIN-SUFFIX,supercell.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,0rz.tw,PROXY,force-remote-dns
 DOMAIN-SUFFIX,4bluestones.biz,PROXY,force-remote-dns
