--- a/quanx.conf
+++ b/quanx.conf
@@ -1236,8 +1236,8 @@ DOMAIN-SUFFIX,ytimg.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,akamaihd.net,PROXY,force-remote-dns
 DOMAIN,media.steampowered.com,PROXY,force-remote-dns
 DOMAIN,store.steampowered.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,brawlstars.com,direct
-DOMAIN-SUFFIX,brawlstarsgame.com,direct
+DOMAIN-SUFFIX,brawlstars.com,game
+DOMAIN-SUFFIX,brawlstarsgame.com,game
 DOMAIN-SUFFIX,supercell.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,0rz.tw,PROXY,force-remote-dns
 DOMAIN-SUFFIX,4bluestones.biz,PROXY,force-remote-dns
