--- a/quanx.conf
+++ b/quanx.conf
@@ -835,10 +835,10 @@ DOMAIN-SUFFIX,bbci.co.uk,PROXY,force-remote-dns
 DOMAIN-KEYWORD,bbcfmt,PROXY,force-remote-dns
 DOMAIN-KEYWORD,uk-live,PROXY,force-remote-dns
 
-USER-AGENT,Anime*,PROXY,force-remote-dns
-DOMAIN-SUFFIX,bahamut.com.tw,PROXY,force-remote-dns
-DOMAIN-SUFFIX,gamer.com.tw,PROXY,force-remote-dns
-DOMAIN-SUFFIX,hinet.net,PROXY,force-remote-dns
+USER-AGENT,Anime*,tw
+DOMAIN-SUFFIX,bahamut.com.tw,tw
+DOMAIN-SUFFIX,gamer.com.tw,tw
+DOMAIN-SUFFIX,hinet.net,tw
 USER-AGENT,mytv*,PROXY,force-remote-dns
 DOMAIN-SUFFIX,mytvsuper.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,tvb.com,PROXY,force-remote-dns
