--- a/quanx.conf
+++ b/quanx.conf
@@ -651,6 +651,7 @@ IP-CIDR,123.56.152.96/32,REJECT,no-resolve
 # Blocklist 黑名单
 DOMAIN-SUFFIX,kuaizip.com,REJECT
 DOMAIN-SUFFIX,mackeeper.com,REJECT
+
 # > CJ Marketing
 DOMAIN-SUFFIX,4009997658.com,REJECT
 DOMAIN-SUFFIX,abbyychina.com,REJECT
@@ -707,12 +708,12 @@ DOMAIN-SUFFIX,zhzzx.com,REJECT
 //me
 DOMAIN-SUFFIX,pximg.net,PROXY
 DOMAIN-SUFFIX,wikimedia.org,PROXY
-IP-CIDR,198.11.184.0/21,DIRECT,no-resolve
-IP-CIDR,198.11.128.0/18,DIRECT,no-resolve
-IP-CIDR,192.126.125.210/32,DIRECT,no-resolve
-IP-CIDR,140.101.144.98/32,PROXY,no-resolve
-DOMAIN-KEYWORD,github,PROXY,force-remote-dns
-IP-CIDR,34.80.56.62/32,DIRECT,no-resolve
+IP-CIDR,198.11.184.0/21,DIRECT
+IP-CIDR,198.11.128.0/18,DIRECT
+IP-CIDR,192.126.125.210/32,DIRECT
+IP-CIDR,140.101.144.98/32,PROXY
+DOMAIN-KEYWORD,github,PROXY
+IP-CIDR,34.80.56.62/32,DIRECT
 DOMAIN-SUFFIX,muncloud.com,PROXY
 DOMAIN,e.crashlytics.com,DIRECT
 DOMAIN-SUFFIX,digicert.com,PROXY,force-remote-dns
@@ -809,10 +810,12 @@ DOMAIN-SUFFIX,bbci.co.uk,PROXY,force-remote-dns
 DOMAIN-KEYWORD,bbcfmt,PROXY,force-remote-dns
 DOMAIN-KEYWORD,uk-live,PROXY,force-remote-dns
 
+//动画疯
 USER-AGENT,Anime*,tw
 DOMAIN-SUFFIX,bahamut.com.tw,tw
 DOMAIN-SUFFIX,gamer.com.tw,tw
 DOMAIN-SUFFIX,hinet.net,tw
+
 USER-AGENT,mytv*,PROXY,force-remote-dns
 DOMAIN-SUFFIX,mytvsuper.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,tvb.com,PROXY,force-remote-dns
@@ -1122,7 +1125,13 @@ USER-AGENT,Roam*,PROXY,force-remote-dns
 
 
 
-
+//game
+ip-cidr, 13.251.0.0/15, game
+ip-cidr, 13.250.0.0/15, game
+ip-cidr, 13.232.0.0/14, game
+ip-cidr, 18.204.0.0/14, game
+ip-cidr, 34.240.0.0/13, game
+ip-cidr, 18.179.0.0/16, game
 
 // Amazon
 IP-CIDR,13.32.0.0/16,PROXY,no-resolve
@@ -1532,7 +1541,7 @@ IP-CIDR,192.168.0.0/16,DIRECT
 DOMAIN,client.amplifi.com,DIRECT
 DOMAIN,ip.bjango.com,DIRECT
 DOMAIN-SUFFIX,alphassl.com,DIRECT
-DOMAIN-SUFFIX,edu.cn,DIRECT
+DOMAIN-SUFFIX,cn,DIRECT
 
 //ali
 IP-CIDR,47.246.16.0/24,DIRECT
@@ -1547,6 +1556,8 @@ IP-CIDR,185.188.35.0/24,DIRECT,no-resolve
 // Accelerate direct sites
 DOMAIN-KEYWORD,torrent,DIRECT
 
+//me
+ip-cidr, 239.255.255.250/32, direct
 
 GEOIP,CN,DIRECT
 FINAL,PROXY
