--- a/quanx.conf
+++ b/quanx.conf
@@ -53,7 +53,8 @@ DOMAIN-SUFFIX,qchannel01.cn,REJECT
 DOMAIN-SUFFIX,itsdata.map.baidu.com,REJECT
 
 DOMAIN-SUFFIX,nuomi.com,REJECT
-DOMAIN-SUFFIX,adjust.com,REJECT
+
+//高德
 DOMAIN,aoscdn.amap.com,REJECT
 DOMAIN,page.amap.com,REJECT
 DOMAIN,sync.amap.com,REJECT
@@ -72,33 +73,15 @@ DOMAIN,x.appbaqend.com,REJECT
 DOMAIN-SUFFIX,inner-active.mobi,REJECT
 DOMAIN-SUFFIX,applovin.com,REJECT
 DOMAIN,union.uc.cn,REJECT
-DOMAIN,ad-stat.ksosoft.com,REJECT
-DOMAIN-SUFFIX,kingsoft-office-service.com,REJECT
-USER-AGENT,wpsoffice*,REJECT
 DOMAIN-SUFFIX,tlnk.io,REJECT
 DOMAIN-SUFFIX,alexametrics.com,REJECT
 
+//WPS
+DOMAIN,ad-stat.ksosoft.com,REJECT
+DOMAIN-SUFFIX,kingsoft-office-service.com,REJECT
+USER-AGENT,wpsoffice*,REJECT
 
-# > Baidu
-DOMAIN,loc.map.baidu.com,REJECT
-DOMAIN,nsclick.baidu.com,REJECT
-DOMAIN,api.map.baidu.com,REJECT
-DOMAIN,ps.map.baidu.com,REJECT
-DOMAIN,sv.map.baidu.com,REJECT
-DOMAIN,offnavi.map.baidu.com,REJECT
-DOMAIN,newvector.map.baidu.com,REJECT
-DOMAIN,newloc.map.n.shifen.com,REJECT
-DOMAIN,ulog.imap.baidu.com,REJECT
-DOMAIN,sv.map.baidu.com,REJECT
-DOMAIN-SUFFIX,data.haoma.sogou.com,REJECT
-DOMAIN-SUFFIX,sp0.baidu.com,REJECT
-DOMAIN-SUFFIX,udpolimenew.baidu.com,REJECT
-DOMAIN-SUFFIX,hpd.baidu.com,REJECT
-DOMAIN-SUFFIX,baidustatic.com,REJECT
-DOMAIN,afd.baidu.com,REJECT
-DOMAIN,hm.baidu.com,REJECT
-DOMAIN,hmma.baidu.com,REJECT
-DOMAIN,mobads-logs.baidu.com,REJECT
+
 
 
 # Advertising Block 去广告以及隐私追踪保护
@@ -392,6 +375,23 @@ DOMAIN,rd.autohome.com.cn,REJECT
 DOMAIN,al.autohome.com.cn,REJECT
 DOMAIN,applogapi.autohome.com.cn,REJECT
 # (B)
+
+
+# > Baidu
+DOMAIN,loc.map.baidu.com,REJECT
+DOMAIN,api.map.baidu.com,REJECT
+DOMAIN,ps.map.baidu.com,REJECT
+DOMAIN,sv.map.baidu.com,REJECT
+DOMAIN,offnavi.map.baidu.com,REJECT
+DOMAIN,newvector.map.baidu.com,REJECT
+DOMAIN,newloc.map.n.shifen.com,REJECT
+DOMAIN,ulog.imap.baidu.com,REJECT
+DOMAIN,sv.map.baidu.com,REJECT
+DOMAIN-SUFFIX,data.haoma.sogou.com,REJECT
+DOMAIN-SUFFIX,sp0.baidu.com,REJECT
+DOMAIN-SUFFIX,udpolimenew.baidu.com,REJECT
+DOMAIN-SUFFIX,hpd.baidu.com,REJECT
+
 # > Baidu
 DOMAIN-SUFFIX,baidustatic.com,REJECT
 DOMAIN,afd.baidu.com,REJECT
@@ -402,6 +402,7 @@ DOMAIN,mobads.baidu.com,REJECT
 DOMAIN,mobads-logs.baidu.com,REJECT
 DOMAIN,nsclick.baidu.com,REJECT
 DOMAIN,wn.pos.baidu.com,REJECT
+
 # > ByteDance
 DOMAIN,applog.musical.ly,REJECT
 DOMAIN,track.toutiao.com,REJECT
@@ -718,9 +719,9 @@ DOMAIN-SUFFIX,muncloud.com,PROXY
 DOMAIN,e.crashlytics.com,DIRECT
 DOMAIN-SUFFIX,digicert.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,ampproject.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,cmbchina.com,DIRECT
-DOMAIN-SUFFIX,cmbchina.com,DIRECT
 DOMAIN-SUFFIX,ampproject.org,PROXY,force-remote-dns
+DOMAIN-SUFFIX,cmbchina.com,DIRECT
+DOMAIN-SUFFIX,cmbchina.com,DIRECT
 DOMAIN-SUFFIX,beautylegmm.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,pixhost.to,PROXY,force-remote-dns
 DOMAIN-SUFFIX,tiqcdn.com,DIRECT
@@ -729,8 +730,10 @@ DOMAIN-SUFFIX,mtvip.net,DIRECT
 DOMAIN-SUFFIX,lxysh.xyz,DIRECT
 DOMAIN-SUFFIX,cloudfront.net,DIRECT
 DOMAIN-SUFFIX,pthome.net,DIRECT
+
 DOMAIN-SUFFIX,acompli.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,helpshift.com,PROXY,force-remote-dns
+
 DOMAIN-SUFFIX,evernote.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,ssr.sh,PROXY,force-remote-dns
 DOMAIN-SUFFIX,sehuatang.org,PROXY,force-remote-dns
