--- a/quanx.conf
+++ b/quanx.conf
@@ -1129,6 +1129,13 @@ USER-AGENT,Roam*,PROXY,force-remote-dns
 
 
 //game
+ip-cidr, 54.254.128.0/17, game
+ip-cidr, 18.228.0.0/16, game
+ip-cidr, 3.120.0.0/14, game
+ip-cidr, 3.80.0.0/12, game
+ip-cidr, 54.64.0.0/15, game
+ip-cidr, 18.231.0.0/16, game
+ip-cidr, 13.228.0.0/15, game
 ip-cidr, 13.251.0.0/15, game
 ip-cidr, 13.250.0.0/15, game
 ip-cidr, 13.232.0.0/14, game
