--- a/quanx.conf
+++ b/quanx.conf
@@ -1129,6 +1129,10 @@ USER-AGENT,Roam*,PROXY,force-remote-dns
 
 
 //game
+ip-cidr, 13.126.0.0/15, game
+ip-cidr, 34.208.0.0/12, game
+ip-cidr, 184.72.96.0/19, game
+ip-cidr, 52.196.0.0/14, game
 ip-cidr, 54.254.128.0/17, game
 ip-cidr, 18.228.0.0/16, game
 ip-cidr, 3.120.0.0/14, game
