--- a/quanx.conf
+++ b/quanx.conf
@@ -1129,6 +1129,8 @@ USER-AGENT,Roam*,PROXY,force-remote-dns
 
 
 //game
+ip-cidr, 35.0.0.0/8, game
+ip-cidr, 63.0.0.0/8, game
 ip-cidr, 184.0.0.0/8, game
 ip-cidr, 52.0.0.0/8, game
 ip-cidr, 3.0.0.0/8, game
