--- a/quanx.conf
+++ b/quanx.conf
@@ -63,7 +63,14 @@ DOMAIN,aos-cdn-image.amap.com,REJECT
 DOMAIN,wb.amap.com,REJECT
 DOMAIN,f.amap.com,REJECT
 
-
+DOMAIN-SUFFIX,ac.mmstat.com,REJECT
+DOMAIN-SUFFIX,go.mmstat.com,REJECT
+DOMAIN-SUFFIX,gxb.mmstat.com,REJECT
+DOMAIN-SUFFIX,hz.mmstat.com,REJECT
+DOMAIN-SUFFIX,p3p.mmstat.com,REJECT
+DOMAIN-SUFFIX,res.mmstat.com,REJECT
+DOMAIN-SUFFIX,yt.mmstat.com,REJECT
+DOMAIN-SUFFIX,wgo.mmstat.com,REJECT
 
 DOMAIN-SUFFIX,hockeyapp.net,REJECT
 DOMAIN,fuwu.wap.sogou.com,REJECT
@@ -94,6 +101,12 @@ DOMAIN-SUFFIX,vd.l.qq.com,DIRECT
 DOMAIN-KEYWORD,adservice,REJECT
 DOMAIN-KEYWORD,analytics,REJECT
 DOMAIN-KEYWORD,analysis,REJECT
+DOMAIN-KEYWORD,trace,REJECT
+DOMAIN-KEYWORD,traffic,REJECT
+DOMAIN-KEYWORD,usage,REJECT
+DOMAIN-KEYWORD,openx,REJECT
+DOMAIN-KEYWORD,admob,REJECT
+DOMAIN-KEYWORD,qtmojo,REJECT
 
 DOMAIN-SUFFIX,3lift.com,REJECT
 DOMAIN-SUFFIX,4006825178.com,REJECT
