--- a/quanx.conf
+++ b/quanx.conf
@@ -47,10 +47,9 @@ DOMAIN-SUFFIX,goodreads.com,PROXY,force-remote-dns
 //me
 DOMAIN-SUFFIX,umengcloud.com,REJECT
 DOMAIN-SUFFIX,appbaqend.com,REJECT
-DOMAIN-SUFFIX,doubleclick.net,REJECT
 DOMAIN-SUFFIX,data.flurry.com,REJECT
 DOMAIN-SUFFIX,qchannel01.cn,REJECT
-DOMAIN-SUFFIX,itsdata.map.baidu.com,REJECT
+
 
 DOMAIN-SUFFIX,nuomi.com,REJECT
 
@@ -391,10 +390,22 @@ DOMAIN,applogapi.autohome.com.cn,REJECT
 
 
 # > Baidu
+DOMAIN,eclick.baidu.com,REJECT
+DOMAIN,entry.baidu.com,REJECT
+DOMAIN,mobads-logs.baidu.com,REJECT
+DOMAIN,mobads.baidu.com,REJECT
+DOMAIN,mtj.baidu.com,REJECT
+DOMAIN,spcode.baidu.com,REJECT
+DOMAIN,ucstat.baidu.com,REJECT
+DOMAIN,union.baidu.com,REJECT
+DOMAIN,imageplus.baidu.com,REJECT
+DOMAIN-SUFFIX,pos.baidu.com,REJECT
+DOMAIN-SUFFIX,baichuan.baidu.com,REJECT
+DOMAIN-SUFFIX,tuisong.baidu.com,REJECT
+DOMAIN-SUFFIX,itsdata.map.baidu.com,REJECT
 DOMAIN,loc.map.baidu.com,REJECT
 DOMAIN,api.map.baidu.com,REJECT
 DOMAIN,ps.map.baidu.com,REJECT
-DOMAIN,sv.map.baidu.com,REJECT
 DOMAIN,offnavi.map.baidu.com,REJECT
 DOMAIN,newvector.map.baidu.com,REJECT
 DOMAIN,newloc.map.n.shifen.com,REJECT
@@ -404,17 +415,14 @@ DOMAIN-SUFFIX,data.haoma.sogou.com,REJECT
 DOMAIN-SUFFIX,sp0.baidu.com,REJECT
 DOMAIN-SUFFIX,udpolimenew.baidu.com,REJECT
 DOMAIN-SUFFIX,hpd.baidu.com,REJECT
-
-# > Baidu
 DOMAIN-SUFFIX,baidustatic.com,REJECT
 DOMAIN,afd.baidu.com,REJECT
 DOMAIN,duclick.baidu.com,REJECT
 DOMAIN,hm.baidu.com,REJECT
 DOMAIN,hmma.baidu.com,REJECT
-DOMAIN,mobads.baidu.com,REJECT
-DOMAIN,mobads-logs.baidu.com,REJECT
 DOMAIN,nsclick.baidu.com,REJECT
 DOMAIN,wn.pos.baidu.com,REJECT
+
 
 # > ByteDance
 DOMAIN,applog.musical.ly,REJECT
