--- a/quanx.conf
+++ b/quanx.conf
@@ -49,7 +49,7 @@ DOMAIN-SUFFIX,umengcloud.com,REJECT
 DOMAIN-SUFFIX,appbaqend.com,REJECT
 DOMAIN-SUFFIX,data.flurry.com,REJECT
 DOMAIN-SUFFIX,qchannel01.cn,REJECT
-
+DOMAIN,g-assets.daily.taobao.net,REJECT
 
 DOMAIN-SUFFIX,nuomi.com,REJECT
 
