--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -801,15 +801,15 @@ DOMAIN-SUFFIX,zhzzx.com,REJECT
 
 
 //me
-DOMAIN-SUFFIX,pximg.net,PROXY
-DOMAIN-SUFFIX,wikimedia.org,PROXY
-IP-CIDR,198.11.184.0/21,DIRECT
-IP-CIDR,198.11.128.0/18,DIRECT
-IP-CIDR,192.126.125.210/32,DIRECT
-IP-CIDR,140.101.144.98/32,PROXY
-DOMAIN-KEYWORD,github,PROXY
-IP-CIDR,34.80.56.62/32,DIRECT
-DOMAIN-SUFFIX,muncloud.com,PROXY
+DOMAIN-SUFFIX,pximg.net,PROXY,force-remote-dns
+DOMAIN-SUFFIX,wikimedia.org,PROXY,force-remote-dns
+IP-CIDR,198.11.184.0/21,DIRECT,no-resolve
+IP-CIDR,198.11.128.0/18,DIRECT,no-resolve
+IP-CIDR,192.126.125.210/32,DIRECT,no-resolve
+IP-CIDR,140.101.144.98/32,PROXY,no-resolve
+DOMAIN-KEYWORD,github,PROXYforce-remote-dns
+IP-CIDR,34.80.56.62/32,DIRECT,no-resolve
+DOMAIN-SUFFIX,muncloud.com,PROXY,force-remote-dns
 DOMAIN,e.crashlytics.com,DIRECT
 DOMAIN-SUFFIX,digicert.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,ampproject.net,PROXY,force-remote-dns
@@ -988,7 +988,7 @@ DOMAIN-SUFFIX,arte.tv,PROXY,force-remote-dns
 DOMAIN-SUFFIX,ask.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,avgle.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,badoo.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,bandwagonhost.com,PROXY
+DOMAIN-SUFFIX,bandwagonhost.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,bbc.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,behance.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,bibox.com,PROXY,force-remote-dns
@@ -1223,15 +1223,19 @@ USER-AGENT,Roam*,PROXY,force-remote-dns
 
 
 //game
-ip-cidr, 35.0.0.0/8, game
-ip-cidr, 63.0.0.0/8, game
-ip-cidr, 184.0.0.0/8, game
-ip-cidr, 52.0.0.0/8, game
-ip-cidr, 3.0.0.0/8, game
-ip-cidr, 54.0.0.0/8, game
-ip-cidr, 13.0.0.0/8, game
-ip-cidr, 34.0.0.0/8, game
-ip-cidr, 18.0.0.0/8, game
+DOMAIN-SUFFIX,supercell.com,game,force-remote-dns
+DOMAIN-SUFFIX,brawlstars.com,game,force-remote-dns
+DOMAIN-SUFFIX,brawlstarsgame.com,game,force-remote-dns
+IP-CIDR,52.12.0.0/15,game,no-resolve
+IP-CIDR,35.0.0.0/8,game,no-resolve
+IP-CIDR,63.0.0.0/8,game,no-resolve
+IP-CIDR,184.0.0.0/8,game,no-resolve
+IP-CIDR,52.0.0.0/8,game,no-resolve
+IP-CIDR,3.0.0.0/8,game,no-resolve
+IP-CIDR,54.0.0.0/8,game,no-resolve
+IP-CIDR,13.0.0.0/8,game,no-resolve
+IP-CIDR,34.0.0.0/8,game,no-resolve
+IP-CIDR,18.0.0.0/8,game,no-resolve
 
 // Facebook
 IP-CIDR,103.4.96.0/22,PROXY,no-resolve
@@ -1301,9 +1305,6 @@ DOMAIN-SUFFIX,ytimg.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,akamaihd.net,PROXY,force-remote-dns
 DOMAIN,media.steampowered.com,PROXY,force-remote-dns
 DOMAIN,store.steampowered.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,brawlstars.com,game
-DOMAIN-SUFFIX,brawlstarsgame.com,game
-DOMAIN-SUFFIX,supercell.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,0rz.tw,PROXY,force-remote-dns
 DOMAIN-SUFFIX,4bluestones.biz,PROXY,force-remote-dns
 DOMAIN-SUFFIX,9bis.net,PROXY,force-remote-dns
