--- a/lhie1.conf
+++ b/lhie1.conf
@@ -21,14 +21,6 @@ network-framework = true
 🇭🇰 中国深圳 -> 香港 2 | BGP = ss, 120.78.6.211, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=tls, obfs-host=download.windowsupdate.com, udp-relay=true
 🇭🇰 中国深圳 -> 香港 3 | BGP = ss, 120.78.175.138, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=tls, obfs-host=download.windowsupdate.com, udp-relay=true
 🇲🇴 中国深圳 -> 澳门 4 | BGP = ss, 120.77.207.169, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=tls, obfs-host=download.windowsupdate.com, udp-relay=true
-🇨🇳 中国镇江 - Back = ss, 222.186.174.69, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=tls, obfs-host=download.windowsupdate.com, udp-relay=true
-🇷🇺 俄罗斯 - KHV 1 = ss, 185.209.84.223, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=tls, obfs-host=download.windowsupdate.com, udp-relay=true
-🇷🇺 俄罗斯 - KHV 2 = ss, 185.209.84.188, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=tls, obfs-host=download.windowsupdate.com, udp-relay=true
-🇷🇺 俄罗斯 - TELIA = ss, 194.113.104.148, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=tls, obfs-host=download.windowsupdate.com, udp-relay=true
-🇷🇺 俄罗斯 - TTK = ss, 77.244.215.5, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=tls, obfs-host=download.windowsupdate.com, udp-relay=true
-🇨🇦 加拿大 - AZURE = ss, 40.85.202.12, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=tls, obfs-host=download.windowsupdate.com, udp-relay=true
-🇮🇳 印度 - AWS = ss, awsin.0tk8a3a1q4t94dler.com, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=tls, obfs-host=download.windowsupdate.com, udp-relay=true
-🇮🇳 印度 - NTT = ss, 159.89.171.202, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=tls, obfs-host=download.windowsupdate.com, udp-relay=true
 🇨🇳 台湾 - HINET 1 = ss, 61.216.121.210, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=tls, obfs-host=download.windowsupdate.com, udp-relay=true
 🇨🇳 台湾 - HINET 2 = ss, 125.227.83.15, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=tls, obfs-host=download.windowsupdate.com, udp-relay=true
 🇨🇳 台湾 - HINET 3 = ss, hinet3.0tk8a3a1q4t94dler.com, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=tls, obfs-host=download.windowsupdate.com, udp-relay=true
@@ -125,7 +117,6 @@ tw = select, Proxy, DIRECT
 game = select, DIRECT
 
 [Rule]
-IP-CIDR,17.0.0.0/8,DIRECT,no-resolve
 DOMAIN,experiment.appadhoc.com,REJECT // Added for webpage: experiment.appadhoc.com:443
 DOMAIN,tracker.appadhoc.com,REJECT // KFC
 DOMAIN,fp.hwwt8.com,REJECT // KFC
@@ -883,6 +874,7 @@ DOMAIN-SUFFIX,windows.com,策略
 DOMAIN-SUFFIX,windows.net,策略
 DOMAIN-SUFFIX,windowsupdate.com,策略
 //Apple
+IP-CIDR,17.0.0.0/8,策略,no-resolve
 DOMAIN,appleiphonecell.com,策略
 USER-AGENT,AppStore*,策略
 USER-AGENT,com.apple.appstored*,策略
