--- a/lhie1.conf
+++ b/lhie1.conf
@@ -13,6 +13,8 @@ replica = false
 network-framework = true
 
 [Proxy]
+日本软银-1 = ss, jp.002.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=qv4aZtT608, udp-relay=true
+日本软银-3 = ss, jp.002.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=qv4aZtT608, udp-relay=true
 🇨🇳 中国上海 - Back = ss, 175.102.11.10, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇨🇳 中国上海 - BGP 1 = ss, 47.100.175.206, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇨🇳 中国上海 - BGP 2 = ss, 47.100.193.49, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
