--- a/lhie1.conf
+++ b/lhie1.conf
@@ -10,6 +10,8 @@ exclude-simple-hostnames = true
 hide-crashlytics-request = true
 ipv6 = true
 replica = false
+internet-test-url = http://www.qualcomm.cn/generate_204
+proxy-test-url = http://www.qualcomm.cn/generate_204
 network-framework = true
 
 [Proxy]
