--- a/lhie1.conf
+++ b/lhie1.conf
@@ -147,7 +147,7 @@ network-framework = true
 🇭🇰 香港 - WTT 8 = ss, wtt8.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 
 [Proxy Group]
-Proxy = select, Proxy, DIRECT
+Proxy = select, Proxy, policy-path = https://dler.cloud/link/grtJYTBcFo8epnVS?list=1
 olo = select, Proxy, DIRECT
 策略 = select, Proxy, DIRECT
 tw = select, Proxy, DIRECT
